--- a/force-app/main/default/lwc/carCard/carCard.html
+++ b/force-app/main/default/lwc/carCard/carCard.html
@@ -3,7 +3,7 @@
         <template if:true={recordId}> 
             <lightning-button-icon icon-name="utility:expand_alt" slot="actions" onclick={handleNavigateToRecord}></lightning-button-icon>
             <div class="slds-m-horizontal_medium"> 
-                <img src={carPictureUrl} alt="Car Picture">
+                <img src={carPictureUrl} alt="Car Image">
                 <lightning-record-view-form onload={handleRecordLoaded} record-id={recordId} object-api-name="Car__c" density="Compact">
                     <lightning-output-field field-name={categoryField}></lightning-output-field> 
                     <lightning-output-field field-name={makeField}></lightning-output-field> 
@@ -16,7 +16,7 @@
             </div>
         </template>
        <template if:false={recordId}>
-        <c-placeholder message="Select a car to see the details"></c-placeholder>
+        <c-placeholder message="Select a car to see its features"></c-placeholder>
        </template>
     </lightning-card>
 </template>
